# Hackathon-Google-Agent

./: CrisisFlow_AI_PRD.md  CrisisFlow_Technical_Execution_Plan.md  PERSON_A_FRONTEND_HANDOFF.md  PROJECT_COMPLETION_STATUS.md  README.md  index.html  package-lock.json  package.json  vite.config.js
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  PERSON_B_HANDOFF.md  README.md  pyproject.toml  requirements-cloud.txt  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/agent/: __init__.py  crisisflow_agent.py  prompts.py
backend/app/api/: dependencies.py  response.py  routes_agent.py  routes_approvals.py  routes_briefings.py  routes_dashboard.py  routes_datasources.py  routes_dispatch.py  routes_health.py  routes_resources.py  routes_suppliers.py
backend/app/data/: datasource_status.json  emergency_contacts.json  hospital_capacity.json  hospital_inventory.json  hospital_staffing.json  hospitals.json  incidents.json  supplier_inventory.json  suppliers.json  traffic_routes.json  transport_options.json  weather_conditions.json
backend/app/services/: __init__.py  analysis_service.py  approval_service.py  bigquery_repository.py  briefing_service.py  dashboard_service.py  data_repository.py  datasource_service.py  dispatch_plan_service.py  dispatch_service.py  gap_service.py  hospital_service.py  incident_service.py  mock_repository.py  (+6 more)
backend/scripts/: check_bigquery_p1_p2.sh  deploy_full_cloud_run.sh  load_mock_data_to_bigquery.py  smoke_test_api.sh
backend/tests/: test_api_flow.py  test_gap_service.py  test_ranking_service.py
(+3 files in other folders)
