[project]
name = "crisisflow-backend"
version = "0.1.0"
description = "FastAPI backend, deterministic dispatch logic, and Gemini briefing support for CrisisFlow AI."
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "pydantic==2.10.4",
  "certifi==2026.5.20",
]

[project.optional-dependencies]
dev = ["pytest==8.3.4", "httpx==0.28.1"]
cloud = ["google-cloud-bigquery==3.27.0", "google-genai==0.5.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
